<resources>
    <string name="app_name">ismPack</string>
    <string name="ismpack">ismPack</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="feed">Feed</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_blogs">Blogs</string>
    <string name="menu_notice_board">Notice Board</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_map">Map</string>
    <string name="menu_settings">Settings</string>
    <string name="item_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="someone_reacted_in_your_post">Someone reacted in your post</string>
    <string name="just_now">Just Now</string>
    <string name="about_text">Welcome to our innovative Android application, specifically designed to cater to the needs of students who are new to college. With our app, you can confidently tackle common challenges such as lack of knowledge about professors, departmental rules, and college regulations, and make informed decisions.\n\n

Created using Java and XML, our app offers a range of essential features to enhance your college experience. Stay updated with the latest achievements, tweets, LinkedIn posts, and more through our dynamic feed. Read insightful blogs written by verified users, sharing their thoughts on placements, college life, and beyond.\n\n

Never miss an important notice with our notice board, keeping you informed about college-related announcements. Stay in the loop with mess timings, menu, and special events, ensuring you never go hungry. Need to buy or sell second-hand items like cycles, mattresses, or calculators? Our app allows you to connect with other users and deal with academic-related items seamlessly.\n\n

Get around your college campus with ease using our college map feature, helping you navigate from one place to another effortlessly. Access important links and contacts through our quick links section, making sure you have all the information you need at your fingertips. Plus, you can provide valuable feedback, customize settings, and learn more about the app through our settings and about sections.\n\n

Join us in creating an unparalleled college experience for students through our innovative Android app.</string>
    <string name="rajiv">
        <b>Prof. Rajiv Shekhar(Director):</b>\nmail:- director@iitism.ac.in
        \n\n<b>Prof. Mritunjay Kr.Singh Dean (Students Welfare):</b>\nmail:- dsw@iitism.ac.in
        \n\n<b>Prof. Saurabh Dutta Gupta , Associate Dean (Hostel Management): </b>\nmail:- adhm@iitism.ac.in
        \n\n<b>Mr. Ram Manohar (Sr. Security Officer): </b>\nmobile:- 9471193016 , mail:- sseo@iitism.ac.in
        \n\n<b>Prof. Govind Murmu (Chief Warden of Jasper Hostel): </b>\nmobile:- 7870591443 , mail:- govind@iitism.ac.in
        \n\n<b>Prof. Rajib Sarkar (Chief Warden of Emerald Hostel): </b>\nmobile:- 9430351282 , mail:- rajib@iitism.ac.in
        \n\n<b>Prof. Umakanta Tripathy (Chief Warden of Amber Hostel): </b>\nmobile:- 9471192489 , mail:- utripathy@iitism.ac.in
        \n\n<b>Prof. Gyan Prakash (Chief Warden of Topaz Hostel): </b>\nmobile:- 9771439583 , mail:- gyan@iitism.ac.in
        \n\n<b>Prof. Sushrut Das (Chief Warden of Sapphire Hostel): </b>\nmobile:- 9430374392 , mail:- sushrut@iitism.ac.in
        \n\n<b>Prof. Probodha Ranjan Sahoo (Chief Warden of Opal Hostel): </b>\nmobile:- 7549200242 , mail:- prabodha@iitism.ac.in
        \n\n<b>Prof. Raj Kiran (Chief Warden of Diamond Hostel): </b>\nmobile:- 6205476743 , mail:- rajkiran@iitism.ac.in
        \n\n<b>Prof. Renu V (Chief Warden of Rosaline/Ruby Hostel Hostel): </b>\nmobile:- 9334985363 , mail:- renuvalsala@iitism.ac.in
        \n\n

    </string>


    <string name="contactwithme"><b>Contact with us at:</b> ismpack.help@gmail.com</string>
</resources>